# ocpp

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  expand2.txt  rustfmt.toml  taplo.toml
macros/: Cargo.toml
macros/src/: lib.rs
ocpp_json_validate/: Cargo.toml
ocpp_json_validate/ocpp_json_validate_attribute/: Cargo.toml
ocpp_json_validate/ocpp_json_validate_attribute/src/: lib.rs
ocpp_json_validate/src/: lib.rs
ocpp_json_validate_attribute/src/: lib.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: common_types.rs  error.rs  lib.rs  macros.rs  main.rs  ocpp_json_validate.rs  schema.rs  test.rs  validate.rs  validate_compare.rs  validation_macros.rs
src/authentication_list_management/: get_local_list_version.rs  mod.rs  send_local_list.rs
src/common/: charging_profile.rs  common_types.rs  data_transfer.rs  meter_value.rs  mod.rs  request.rs
src/core/: authorize.rs  boot_notification.rs  change_availability.rs  change_configuration.rs  clear_cache.rs  data_transfer.rs  get_configuration.rs  heartbeat.rs  meter_values.rs  mod.rs  remote_start_transaction.rs  remote_stop_transaction.rs  reset.rs  start_transaction.rs  status_notification.rs  stop_transaction.rs  unlock_connector.rs
src/firmware_management/: diagnostic_status_notification.rs  firmware_status_notification.rs  get_diagnostics.rs  mod.rs  update_firmware.rs
src/json_schemas/: RemoteStartTransaction.json
src/point_init/: authorize.rs  boot_notification.rs  data_transfer.rs  diagnostic_status_notification.rs  firmware_status_notification.rs  heartbeat.rs  meter_values.rs  mod.rs  start_transaction.rs  status_notification.rs  stop_transaction.rs
src/schema/: mod.rs
src/schema/authentication_list_management/: get_local_list_version.rs  mod.rs  send_local_list.rs
src/schema/core/: authorize.rs  boot_notification.rs  change_availability.rs  change_configuration.rs  clear_cache.rs  data_transfer.rs  get_configuration.rs  heartbeat.rs  meter_values.rs  mod.rs  remote_start_transaction.rs  remote_stop_transaction.rs  reset.rs  start_transaction.rs  status_notification.rs  stop_transaction.rs  unlock_connector.rs
src/schema/firmware_management/: firmware_status_notification.rs  update_firmware.rs
src/server_init/: change_availability.rs  change_configuration.rs  clear_cache.rs  clear_charging_profile.rs  data_transfer.rs  get_composite_schedule.rs  get_configuration.rs  get_diagnostics.rs  get_local_list_version.rs  mod.rs  remote_start_transaction.rs  remote_stop_transaction.rs  reset.rs  send_local_list.rs  set_charging_profile.rs  trigger_message.rs  unlock_connector.rs  update_firmware.rs
src/smart_charging/: clear_charging_profile.rs  get_composite_schedule.rs  mod.rs  set_charging_profile.rs
(+2 files in other folders)
