[package]
authors    = ["Mastercom <software@mastercom.com.au>", "Cameron Duff <cameron.duff@mastercom.com.au>", "Lewis Hyman <lewis.hyman@mastercom.com.au>"]
edition    = "2021"
name       = "ocpp"
repository = "https://bitbucket.org/mastercomms/ocpp"
version    = "0.2.1"

[dependencies]
# Crates with features
chrono     = {version = "^0.4", features = ["serde"]}
jsonschema = {version = "^0.16", default-features = false}
serde      = {version = "^1.0", features = ["derive"]}

# Crates without features
derive_builder = "^0.11"
lazy_static    = "^1.4"
proptest       = "^1"
serde_json     = "^1.0"
serde_with     = "^2.0"
strum          = "^0.24.0"
strum_macros   = "^0.24"
test-strategy  = "^0.2"
thiserror      = "^1"
tracing        = "^0.1"

validator = {version = "0.16", features = ["derive"]}

# Internal crates
ocpp_json_validate = {version = "^1.0", path = "./ocpp_json_validate"}
