[package]
authors = [
 "Mastercom <software@mastercom.com.au>",
 "Cameron Duff <cameron.duff@mastercom.com.au>",
 "Lewis Hyman <lewis.hyman@mastercom.com.au>",
]
edition = "2021"
name = "ocpp"
repository = "https://bitbucket.org/mastercomms/ocpp"
version = "0.2.1"

[dependencies]
# Crates with features
chrono     = {version = "^0.4", features = ["serde"]}
jsonschema = {version = "^0.17", default-features = false}
serde      = {version = "^1.0", features = ["derive"]}
serde_with = {version = "^3.4", features = ["macros"], default_features = false}

# Crates without features
lazy_static  = "^1.4"
serde_json   = "^1.0"
strum        = "^0.25.0"
strum_macros = "^0.25"
thiserror    = "^1"
tracing      = "^0.1"

# Internal crates
ocpp_json_validate = {version = "^1.0", path = "./ocpp_json_validate"}
