[package]
authors = [
 "Mastercom <software@mastercom.com.au>",
 "Cameron Duff <cameron.duff@mastercom.com.au>",
 "Lewis Hyman <lewis.hyman@mastercom.com.au>",
]
edition = "2021"
name = "ocpp"
repository = "https://github.com/mastercom-au/ocpp"
version = "0.2.2"
license = "Apache-2.0"
license-file = "LICENSE.txt"

[dependencies]
# Crates with features
chrono       = {version = "^0.4", features = ["serde"]}
jsonschema   = {version = "^0.17", default-features = false}
serde        = {version = "^1.0", features = ["derive"]}
serde_with   = {version = "^3.6", features = ["macros"], default_features = false}
strum        = {version = "^0.26", features = ["derive"]}


# Crates without features
lazy_static  = "^1.4"
serde_json   = "^1.0"
strum_macros = "^0.26.0"
thiserror    = "^1"
tracing      = "^0.1"

# Internal crates
ocpp_json_validate = {version = "^1.0", path = "./ocpp_json_validate"}
